<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.shikeclass.app.activity.ImportClassActivity">

    <com.shikeclass.app.view.MyToolbar
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:title="@string/import_class" />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginEnd="12dp"
                android:layout_marginStart="12dp"
                android:text="@string/academic_year"
                android:textColor="@color/black"
                android:textSize="16sp" />

            <org.angmarch.views.NiceSpinner
                android:id="@+id/spinner_academic_year"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="12dp"
                android:foreground="@drawable/spinner_bg"
                app:arrowTint="@color/grey_7a7a7a" />


        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginEnd="12dp"
                android:layout_marginStart="12dp"
                android:text="@string/term"
                android:textColor="@color/black"
                android:textSize="16sp" />

            <org.angmarch.views.NiceSpinner
                android:id="@+id/spinner_term"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="12dp"
                android:foreground="@drawable/spinner_bg"
                app:arrowTint="@color/grey_7a7a7a" />


        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginEnd="12dp"
                android:layout_marginStart="12dp"
                android:text="@string/faculty"
                android:textColor="@color/black"
                android:textSize="16sp" />

            <org.angmarch.views.NiceSpinner
                android:id="@+id/spinner_faculty"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="12dp"
                android:foreground="@drawable/spinner_bg"
                app:arrowTint="@color/grey_7a7a7a" />


        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginEnd="12dp"
                android:layout_marginStart="12dp"
                android:text="@string/grade"
                android:textColor="@color/black"
                android:textSize="16sp" />

            <org.angmarch.views.NiceSpinner
                android:id="@+id/spinner_grade"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="12dp"
                android:foreground="@drawable/spinner_bg"
                app:arrowTint="@color/grey_7a7a7a" />


        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginEnd="12dp"
                android:layout_marginStart="12dp"
                android:text="@string/school_class"
                android:textColor="@color/black"
                android:textSize="16sp" />

            <org.angmarch.views.NiceSpinner
                android:id="@+id/spinner_school_class"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="12dp"
                android:foreground="@drawable/spinner_bg"
                app:arrowTint="@color/grey_7a7a7a" />


        </LinearLayout>

        <TextView
            android:id="@+id/btn_import"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="28dp"
            android:layout_marginStart="28dp"
            android:layout_marginTop="28dp"
            android:background="@drawable/button_red"
            android:foreground="?selectableItemBackground"
            android:gravity="center"
            android:paddingBottom="12dp"
            android:paddingTop="12dp"
            android:text="导入"
            android:textColor="@color/white"
            android:textSize="20sp" />


    </LinearLayout>


</LinearLayout>
